# Demo_ansible_juniper

./: .ansible-lint  .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml
ansible_juniper/callback_plugins/: capture_output.py
ansible_juniper/inventory/development/: hosts.yml
ansible_juniper/inventory/development/group_vars/: lab.yml
ansible_juniper/playbook/: pb_add_interface_vlan.yml
ansible_juniper/playbook/pb_add_interface_vlan/: vars.yml
ansible_juniper/roles/common/tasks/: show_config_after.yml  show_config_before.yml  show_status_after.yml  show_status_before.yml
ansible_juniper/roles/juniper/tasks/: commit.yml  get_facts.yml  show_config_after.yml  show_config_before.yml
